--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/tsuyukimakoto/chore_ethereum_contract#readme",
   "devDependencies": {
     "hardhat": "^2.10.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
