--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/tsuyukimakoto/chore_ethereum_contract#readme",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "ethers": "^5.6.9",
     "hardhat": "^2.10.1"
   },
   "dependencies": {
