HardhatからEtherscanを使う準備

--- a/.env.base
+++ b/.env.base
@@ -2,3 +2,4 @@ API_URL = "https://eth-goerli.alchemyapi.io/v2/your-api-key"
 API_KEY = "<your-api-key>"
 PRIVATE_KEY = "your-metamask-private-key"
 CONTRACT_ADDRESS = "0x<your contract address>"
+ETHERSCAN_API_KEY = "get from https://etherscan.io/myapikey"
